k8s/frontend-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-green
  labels:
    app: frontend
    color: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      color: green
  template:
    metadata:
      labels:
        app: frontend
        color: green
    spec:
      containers:
        - name: frontend
          image: lokesh86186/blue-green-green:v10
          ports:
            - containerPort: 80
